Update README.md w gradle commands